@@ -74,7 +74,6 @@ ENABLE_ANIMATION_API = ;
 ENABLE_CHANNEL_MESSAGING = ENABLE_CHANNEL_MESSAGING;
 ENABLE_CSS_FILTERS = ENABLE_CSS_FILTERS;
 ENABLE_CSS_GRID_LAYOUT = ENABLE_CSS_GRID_LAYOUT;
-ENABLE_CSS_SHADERS = ENABLE_CSS_SHADERS;
 ENABLE_DATA_TRANSFER_ITEMS = ;
 ENABLE_DETAILS = ENABLE_DETAILS;
 ENABLE_DEVICE_ORIENTATION = ;
